# compiler

./: .clang-format  .gitignore  CMakeLists.txt
grammar/: CMakeLists.txt  grammar.cpp  grammar.h  server.cpp
grammar/test/: grammar_test.cpp
grammar/web/: index.html  script.js  style.css
include/: json.hpp
lexer/: CMakeLists.txt  lexer.cpp  main.cpp  server.cpp
lexer/include/: lexer.h
lexer/test/: lexer_test.cpp
lexer/web/: index.html  script.js  styles.css
recite/: re2post.cpp
regexp/: CMakeLists.txt  codegen.cpp  codegen.h  dfa.cpp  dfa.h  minimized_dfa.cpp  minimized_dfa.h  nfa.cpp  nfa.h  re.cpp  re.h  server.cpp
regexp/test/: regexp_test.cpp
regexp/web/: index.html  script.js  style.css
tiny/: .gitignore  Makefile  a.tny  analyze.c  code.c  code.h  globals.h  input.tny  main.c  parse.c  scan.c  server.cpp  symtab.c  tm.c  util.c
tiny/lex/: lex.yy.c
tiny/test/: bitwise.tny  comparison.tny  for.tny  if.tny  op.tny  regex.tny  sample1.tny  sample2.tny
tiny/web/: index.html  script.js  style.css
tiny/yacc/: GLOBALS.H  TINY.Y  y.tab.c  y.tab.h
